<resources>
    <string name="app_name">Any Service</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tagline">We are happy to serve you.</string>
    <string name="explore">Explore new ways for your services</string>
    <string name="continue_text">Continue with Phone Number</string>
    <string name="divider_text">OR</string>
    <string name="phone_request_details">This number will be used for all service related communication. You shall receive an SMS with code for verification.</string>
    <string name="next">Next</string>
    <string name="indian_code">+91</string>
    <string name="prompt_phone">Your number</string>
    <string name="otp_wait_text">Please wait. We will auto verify the OTP sent to</string>
    <string name="verify">Verify</string>
    <string name="otp_hint">\u25CF\u25CF\u25CF\u25CF\u25CF\u25CF</string>
    <string name="auto_verify">Auto Verifying your OTP in </string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="back_text"><b>&#x2190;</b></string>
    <string name="enter_phone">Enter Phone number for verification</string>
    <string name="create_account">Please fill in the details to create your account</string>
    <string name="fullname">Full Name</string>
    <string name="email_optional">Email(Optional)</string>
    <string name="register">Register</string>
    <string name="seller">Agent</string>
    <string name="aadhar">Aadhar No.</string>
    <string name="aadhar_front">Aadhar Front</string>
    <string name="aadhar_back">Aadhar Back</string>
    <string name="customer">Customer</string>
    <string name="instruction">Instructions</string>
    <string name="welcome_anyservice">Welcome to Any Service</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Orders</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_location">Your Location</string>
    <string name="icon_setting">&#xf085;</string>
    <string name="icon_info">&#xf059;</string>
    <string name="icon_wallet">&#xf555; </string>
    <string name="icon_user">&#xf2bd;</string>
    <string name="icon_history">&#xf2bd;</string>
    <string name="icon_refresh">&#xf021;</string>
    <string name="search">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="company_details">Company/Shop Details</string>
    <string name="company_name">Company/Shop Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="gst">GSTIN</string>
    <string name="pin">PIN CODE</string>
    <string name="state">State</string>
    <string name="icon_filter">&#xf0b0;</string>
    <string name="icon_sortby">&#xf0dc;</string>
    <string name="icon_distance">&#xf70c;</string>
    <string name="checkout">Checkout</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delivery_cost_text">Delivery Cost</string>
    <string name="confirm">Confirm</string>
    <string name="your_order">Your Order</string>
    <string name="price">Total Cart Value</string>
    <string name="price_text">Price</string>
    <string name="your_items"><b>Your Items</b></string>
    <string name="full_address">Complete Address For Delivery</string>
    <string name="gps_address">GPS Address</string>
    <string name="remark">Remark (Message for Agent)</string>
    <string name="cod">COD (Cash On Delivery)</string>
    <string name="payment_type">Payment Method</string>
    <string name="place_order">Place Order</string>
    <string name="open_Services">Orders in Progress</string>
    <string name="done_Services">Completed or Cancelled Orders</string>
    <string name="ordered_on">Ordered on</string>
    <string name="cancel">Cancel</string>
    <string name="details">More Details...</string>
    <string name="call">&#xf2a0; Call</string>
    <string name="pending">Previous Bill</string>
    <string name="online">Show Available to Customers</string>
    <string name="services">&#xf085;\n\n Services\n&amp;\nProducts</string>
    <string name="distance">&#xf70c;\n\n Service Radius</string>
    <string name="accept">Accept</string>
    <string name="change_price">Change Price</string>
    <string name="invoice">&#xf019; Invoice</string>
    <string name="create_a_service">Create a Service/Product</string>
    <string name="service_name">Service/Product Name</string>
    <string name="need_delivery_charge_for_this_service">Need Delivery Charge for this.</string>
    <string name="stockable_for_e_g_milk_packets_3">Stockable (For Products, e.g. Milk Packets, Butter, etc)</string>
    <string name="category">Category</string>
    <string name="my_services">My Services</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="stockable">Stockable</string>
    <string name="title_activity_profile">My Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="previous">Previous</string>
    <string name="pay">Pay Online</string>
    <string name="please_pay_bill_if_due_amount_100_otherwise_your_account_may_be_blocked"><![CDATA[Please Pay bill if Due Amount>100 otherwise your account may be blocked.]]></string>
    <string name="_0_0">0.0</string>
    <string name="note_please_do_not_press_back_while_doing_transactions">Note : Please Do not Press Back While doing transactions.</string>
    <string name="t_details">Details</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="total">Balance</string>
    <string name="serving_for_unlimited_distance">Serving for Unlimited Distance</string>
    <string name="your_money">Your Money</string>
    <string name="send_message">Send Message</string>
    <string name="terms_condition_text">I have read and agreed with all Terms &amp; Conditions on given <u>link</u></string>
    <string name="buy_now">&#xf07a; Buy Now</string>
    <string name="cart">&#xf07a;</string>
    <string name="description">Description</string>
    <string name="sort_by">Sort By</string>
    <string name="product_mode">Product Mode</string>
    <string name="service_mode">Service Mode</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="empty">Empty</string>
    <string name="default_notification_channel_id" translatable="false">anyservice_channel</string>
    <string name="add">Add</string>
    <string name="value">Value</string>
    <string name="default_notification_channel_name">Anyservice Main</string>

</resources>
