<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WalletActivity">
    <Button
        android:id="@+id/back_button"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorAccent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_money"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <ProgressBar
        android:layout_margin="20dp"
        android:visibility="gone"
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_marginHorizontal="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <helper.IconTextView
                android:clickable="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:text="@string/icon_wallet"/>
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/amount"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"/>
            <Button
                android:id="@+id/pay"
                android:visibility="gone"
                android:backgroundTint="@color/design_default_color_primary_dark"
                android:layout_width="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginHorizontal="2dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:text="@string/pay"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_please_do_not_press_back_while_doing_transactions"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="2"
                android:text="@string/t_details"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="@string/credit"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/debit"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/total"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:layout_marginHorizontal="5dp"
        android:id="@+id/transactions"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"/>
</LinearLayout>