<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/your_items"
            android:visibility="gone"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:text="@string/your_items"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/services"
            android:clickable="false"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/gps_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/gps_address"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_edittext"
            android:padding="10dp"
            android:autofillHints="@string/gps_address" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/full_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/full_address"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:autofillHints="@string/full_address" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/remark"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="none"
            android:padding="10dp"
            android:selectAllOnFocus="true"
            android:autofillHints="@string/remark" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/payment_type"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/payment_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/cod"
            android:layout_width="match_parent"
            android:text="@string/cod"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <ProgressBar
        android:id="@+id/progressbar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:layout_margin="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:id="@+id/place_order"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="@string/place_order"/>
    </LinearLayout>
</ScrollView>