<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <helper.IconTextView
        android:id="@+id/user_icon_textview"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textSize="35sp"
        android:padding="0dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/icon_user"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:layout_gravity="center_vertical"
        android:gravity="left"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:text="@string/your_location"/>
            <ProgressBar
                android:id="@+id/refresh_progress"
                android:layout_width="20dp"
                android:layout_height="20dp"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                />

            <helper.IconTextView
                android:id="@+id/refresh_icon_textview"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:textSize="15sp"
                android:padding="0dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:visibility="gone"
                android:text="@string/icon_refresh"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/location_spinner"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">
        <helper.IconTextView
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:textSize="20sp"
            android:padding="0dp"
            android:layout_gravity="right"
            android:text="@string/icon_setting"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>