<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/any_service_icon_foreground"
        />
    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_anyservice"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorAccent" />
        <TextView
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:text="@string/instruction"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/instruction"
            android:scrollbars="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            />
        <TextView
            android:id="@+id/pending_textview"
            android:textAlignment="center"
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent" />
        <Button
            android:id="@+id/ok_button"
            android:enabled="false"
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:text="@string/next"
            android:textColor="#ffffff"/>
    </LinearLayout>
    

</LinearLayout>